# my_teams

./: .gitignore  CMakeLists.txt  Cargo.toml  Jenkinsfile  Makefile  README.md  STANDARDS.md  build.rs  flake.nix
client/: main.cpp
scripts/: e2e_test.sh
server/: main.cpp
src/: main.cpp  poll.rs
src/client/: context.rs  libcli.rs  main.rs  net.rs  shell.rs
src/client/commands/: dispatcher.rs  handlers.rs  mod.rs  parser.rs  protocol.rs  registry.rs  responses.rs  types.rs
src/client/commands/responses/: auth.rs  context.rs  mod.rs  resources.rs  shared.rs
src/client/shell/: helpers.rs
src/json/: lib.rs
src/server/: cli.rs  libsrv.rs  main.rs  network.rs  notifier.rs  poll.rs  protocol.rs  signal.rs  storage.rs  transport.rs  users.rs
src/server/commands/: dispatcher.rs  handlers.rs  mod.rs  registry.rs  types.rs
src/server/commands/handlers/: auth.rs  context.rs  resources.rs  shared.rs  tests.rs
src/server/network/: helpers.rs
tests/: test.json
